<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.grupo6.buscapets.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_protectoras"
        android:name="com.grupo6.buscapets.ui.protectora.ProtectoraFragment"
        android:label="@string/protectoras"
        tools:layout="@layout/fragment_protectora" />

    <fragment
        android:id="@+id/navigation_usuario"
        android:name="com.grupo6.buscapets.ui.usuario.UsuarioFragment"
        android:label="@string/usuario"
        tools:layout="@layout/fragment_usuario" />
</navigation>